# PlamidInsertChecker

./: .gitignore  README.md  plasmidin_example.py  pyproject.toml  requirements.txt  setup.py
data/: insert_XbaI_XbaI.fa
examples/: insert_XbaI_BamHI.fa  insert_XbaI_XbaI.fa  plasmid.fa  simple_example.py
plasmidin/: __init__.py  __main__.py  plasmid_diagrams.py  plasmidin.py  plasmidin_exceptions.py  pyproject.toml
scripts/: plasmidin_example.py  single_enzyme_cut.py
tests/: plasmidin_testing.py
